Comment out image parameter in ci-pr.yaml
Comment out the image parameter in the CI pipeline configuration.

--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -18,7 +18,7 @@ extends:
   parameters:
     pool:
       name: Azure-Pipelines-1ESPT-ExDShared
-      image: ubuntu-latest
+      # image: ubuntu-latest
       os: linux
 
     stages:
