--- a/.azdo/ci-pr.yaml
+++ b/.azdo/ci-pr.yaml
@@ -18,9 +18,13 @@ extends:
   parameters:
     pool:
       name: Azure-Pipelines-1ESPT-ExDShared
-      # image: ubuntu-latest
+      image: ubuntu-latest
       os: linux
-
+    sdl:
+      sourceAnalysisPool:
+        name: Azure-Pipelines-1ESPT-ExDShared # Name of your hosted pool
+        image: ubuntu-latest
+        os: linux
     stages:
     - stage: Build
       jobs:
